--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,25 @@
     --cor-de-fundo:     #EBECEE;
   --branco:  #FFFFFF;
 }
+
+
+
+
+
+
+
+
+
+
+.swiper-slide img {
+ width:100%
+}
+.swiper-button-prev,
+,swiper-button-next{
+    display:none
+}
+
+
+
+
+
