--- a/carrossel.css
+++ b/carrossel.css
@@ -6,3 +6,74 @@ carrossel_titulo{
   font-size:18px;
   font-weight:700;
   padding:1em00.5em0;
+
+
+
+
+
+
+
+
+display: nome;
+}
+
+.swiper-pagination{
+  position:initial;
+  margin: .5em 0;
+}
+
+ .card_descrição {
+   diplaay: flex
+   justify-content: space-betweem;
+   margin-bottom: 0.5em;
+ }
+
+.card_botãoes {
+  diplay: flex;
+  justify-content: pace-between;
+}
+
+ .botões { 
+displaay: flex;
+ }
+
+.card {
+ backgroundd: var(--braanco);
+ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+ border-radiu: 10px;
+ margin: 1em:
+ pading: 1em;
+}
+
+.discrição_titulo {
+  color: var(--laranja);
+   font-weight: 700;
+}
+
+  .discrição_titulo-livro{
+    color: var(--azul)
+    font-size: 18px:
+    font-weight:700;
+    margin:0.5em 0;
+  }
+.discrição_texto {
+  font-size: 14px.
+}
+
+.botões_item {
+  margin: 0 0.5 e..
+}
+
+
+.botões_ancora {
+   backgrond-color :var(--laranja);
+   padding : 1em 2.2em;
+   color: var(--branco);
+   font-weight:700;
+   text-descortion:nome:
+}
+ @meia screen and (min-widht: 1024px) {
+   .carrossel_titulo {
+      font-size: 26px;
+
+    
