--- a/carrossel.css
+++ b/carrossel.css
@@ -85,3 +85,44 @@ displaay: flex;
    .swiper {
      with: 60
     
+   }
+
+.swiper-button-prev,
+   .swiper-button-next {
+ display:block;
+     top: 60%;
+   }
+
+   .card {
+     width: 40%;
+     margin: 2em auto;
+   }
+ }
+@media screen and (min-width: 1728px) {
+  .carrossel_container {
+    display: flex;
+    margin: 0 20vw 3em 20vw;
+    align-items:center; 
+  }
+
+
+  .swiper-pagination {
+    margin: 1em 0;
+  }
+  .swiper {
+    width: 50%;
+  }
+  .discrição_titulo { 
+    font-size: 32px;
+  }
+  .discrição_testo {
+    font-size: 16px;
+    ]
+    .discrição {
+      margin-right: 2em;
+    }
+    
+  .card {
+    width: 60%;
+    margin-left: 3em;
+    {
