--- a/topicos.css
+++ b/topicos.css
@@ -7,3 +7,39 @@
     color:var(--branco);
     font-weight:300;
     margin-bottom;1em;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+text-decoration: nome;
+font-size: 14px
+font-weight: 700;
+  }
+
+@media screen and (min-width: 1024px)
+  .tópicos_titulo {
+   font- size: 24px;
+}
+
+.tópicos_ link {
+  font-size: 24px;
+}
+
+@media screen and ( min-width: 1728px) {
+  .tópicos {
+    paddinh: 3em 30vw;
+  }
+}
