--- a/header.css
+++ b/header.css
@@ -67,3 +67,102 @@ background-image: ur("../img/Menu Aberto.svg");
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ .cabeçalho_menu-
+
+
+
+.opções_botão: checked~,lista-menu
+display:block
+width: auto;
+}
+
+.opções_botão {
+   display: nome
+}
+.opções_botão: checked~,opções_rotulo>. opções_item {
+  background:var(--azul-desgrade);
+  color: var(--branco);
+}
+.opções_item {
+  padding: 2em 1em;
+}
+
+.lista-menu_item:hover {
+  background:var (--azul-desgrade);
+}
+.lista-menu_item:hover >. menu_link {
+  -webkit-text-fill-color:var(--branco);
+  text- decoration:nome;
+}
+
+}
+
+
+
+
+@media screen and ( min-width: 1728px) {
+  .container_link {
+    display: flex;
+    align-items:center;
+    text-decorqtion: nome;
+    color: var(--preto);
+  }
+
+.cabeçalho {
+  padding: 0 2em;
+}
+
+.opções{
+  margin-right: auto;
+
+
+
+
+}
+}
