--- a/banner.css
+++ b/banner.css
@@ -30,5 +30,11 @@ text-align: center;
 color; var(--branco);
 background; url ("../img/lupa.vg") no_repeat;
 background- position: 1em
+
+
 }
-@media s 
+
+
+
+@media scree and  (min-width: 1024px) {
+  
