--- a/banner.css
+++ b/banner.css
@@ -30,11 +30,35 @@ text-align: center;
 color; var(--branco);
 background; url ("../img/lupa.vg") no_repeat;
 background- position: 1em
-
-
+background: url("../img/lupa.svg") no-repeat
+background-position: 1em;
 }
 
-
-
 @media scree and  (min-width: 1024px) {
-  
+.banner_titulo {
+  font-size: 36px;
+}
+
+  .banner_pesquisa {
+    width: 50%;
+  }
+
+  .banner_pesquisa::placelder {
+    background-position: 7em;
+  }
+}
+
+@media screen and (min-width: 1728px) {
+  .banner_pesquisa {
+    width: 35%;
+  }
+
+  .banner_pesquisa::placeholder {
+    backeground-position :12em;
+  }
+
+  .banner {
+    padding: 6em 0;
+  }
+}
+
