--- a/contato.css
+++ b/contato.css
@@ -1,4 +1,62 @@
-.contato_titulo{
-  font-size:18px;
-  font-weight:500
+.contato {
+   background-color: var (--branco); 
+padding: 1em;
 }
+
+.contato_titulo,
+contato_texto {
+  background: var(--azul-degrade);
+  .wedkit-background-clip:text;
+  .wedkit-texto-fill-color: transparent;
+  background-clip: text;
+}
+
+.contato_titulo {
+  font-size:18px;
+  font-weight: 500;
+}
+
+.contato_texto {
+  font-weiht: 18px;
+  margin: 1 em 0;
+}
+
+.contato_emil {
+  padding: 1em;
+  border: 1epx solod var(--azul);
+  border-radius: 24px;
+  width: 90%;
+  color: var(--azul);
+}
+
+ .contato_email: :placeholder {
+   fonte-family: var(--fonte-principal);
+   color:var(--azul);
+   background: url("../img/email.svg") no-repeat
+   padding-left: 2em;
+ }
+
+@media screen and (min-width: 1024px) {
+  .contato {
+    .display: flex;
+    justify-content: center:
+    align-item:center;
+  }
+
+  .contato_titulo {
+    font-size: 24px;
+  }
+
+  contato_descrição {
+    margin-right: 1em;
+    width: 30%
+  }
+
+  .contato_email {
+    width: 30%
+  }
+
+}
+@media screen and (min-width: 1728px) {
+  .contato {
+    padd
