--- a/carrossel.css
+++ b/carrossel.css
@@ -115,7 +115,7 @@ displaay: flex;
   .discrição_titulo { 
     font-size: 32px;
   }
-  .discrição_testo {
+  .discrição_texto {
     font-size: 16px;
     ]
     .discrição {
